@@ -33,6 +33,7 @@ Improvements:
 - Add option on ``invalid="fix"`` to ``from_wkb`` and ``from_wkt`` (#2094)
 - Add function ``minimum_clearance_line`` (#2106)
 - Add function ``maximum_inscribed_circle`` (#1307)
+- Add support to split polygons by multilinestrings (#2206)
 - Add function ``orient_polygons`` (#2147)
 - Add function ``coverage_simplify`` to allow topological simplification of polygonal
   coverages (#1969)
